; ModuleID = '/home/carl/AnghaBench/mpv/osdep/extr_terminal-unix.c_setsigaction.c'
source_filename = "/home/carl/AnghaBench/mpv/osdep/extr_terminal-unix.c_setsigaction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sigaction = type { void (i32)*, i32, i32 }

@SA_RESTART = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, void (i32)*, i32, i32)* @setsigaction to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @setsigaction(i32 %0, void (i32)* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca void (i32)*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.sigaction, align 8
  store i32 %0, i32* %5, align 4
  store void (i32)* %1, void (i32)** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load void (i32)*, void (i32)** %6, align 8
  %11 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %9, i32 0, i32 0
  store void (i32)* %10, void (i32)** %11, align 8
  %12 = load i32, i32* %8, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %4
  %15 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %9, i32 0, i32 2
  %16 = call i32 @sigfillset(i32* %15)
  br label %20

17:                                               ; preds = %4
  %18 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %9, i32 0, i32 2
  %19 = call i32 @sigemptyset(i32* %18)
  br label %20

20:                                               ; preds = %17, %14
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* @SA_RESTART, align 4
  %23 = or i32 %21, %22
  %24 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %9, i32 0, i32 1
  store i32 %23, i32* %24, align 8
  %25 = load i32, i32* %5, align 4
  %26 = call i32 @sigaction(i32 %25, %struct.sigaction* %9, i32* null)
  ret i32 %26
}

declare dso_local i32 @sigfillset(i32*) #1

declare dso_local i32 @sigemptyset(i32*) #1

declare dso_local i32 @sigaction(i32, %struct.sigaction*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
